--- a/model/Untitled.ipynb
+++ b/model/Untitled.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,12 +62,13 @@
    ],
    "source": [
     "features = list(data.columns[4:])\n",
+    "target=list(data.columns[1:4])\n",
     "print(features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -420,14 +421,14 @@
       "Iteration 249, loss = 0.19011152\n",
       "Iteration 250, loss = 0.18947251\n",
       "Iteration 251, loss = 0.18857479\n",
-      "Iteration 252, loss = 0.18852905\n"
+      "Iteration 252, loss = 0.18852905\n",
+      "Iteration 253, loss = 0.18758227\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 253, loss = 0.18758227\n",
       "Iteration 254, loss = 0.18727051\n",
       "Iteration 255, loss = 0.18652759\n",
       "Iteration 256, loss = 0.18599463\n",
@@ -675,14 +676,14 @@
       "Iteration 498, loss = 0.11397851\n",
       "Iteration 499, loss = 0.11350262\n",
       "Iteration 500, loss = 0.11358190\n",
-      "Iteration 501, loss = 0.11285451\n"
+      "Iteration 501, loss = 0.11285451\n",
+      "Iteration 502, loss = 0.11338630\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 502, loss = 0.11338630\n",
       "Iteration 503, loss = 0.11279240\n",
       "Iteration 504, loss = 0.11273223\n",
       "Iteration 505, loss = 0.11234773\n",
@@ -930,14 +931,14 @@
       "Iteration 747, loss = 0.08201889\n",
       "Iteration 748, loss = 0.08211382\n",
       "Iteration 749, loss = 0.08226307\n",
-      "Iteration 750, loss = 0.08159403\n"
+      "Iteration 750, loss = 0.08159403\n",
+      "Iteration 751, loss = 0.08177449\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 751, loss = 0.08177449\n",
       "Iteration 752, loss = 0.08130056\n",
       "Iteration 753, loss = 0.08164361\n",
       "Iteration 754, loss = 0.08181220\n",
@@ -1185,13 +1186,7 @@
       "Iteration 996, loss = 0.06369236\n",
       "Iteration 997, loss = 0.06266626\n",
       "Iteration 998, loss = 0.06278439\n",
-      "Iteration 999, loss = 0.06314149\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Iteration 999, loss = 0.06314149\n",
       "Iteration 1000, loss = 0.06327595\n"
      ]
     },
